--- a/CS416-Web/Classwork/9-4-2024.html
+++ b/CS416-Web/Classwork/9-4-2024.html
@@ -41,7 +41,7 @@
 
     </style>
     <title>Code1</title>
-    <link rel="icon" type="image/x-icon" href="test.png">
+    <link rel="icon" type="Images/image/x-icon" href="test.png">
 </head>
 
 <div>
