added stuff from lecture 3

--- a/CS416-Web/Classwork/9-4-2024.html
+++ b/CS416-Web/Classwork/9-4-2024.html
@@ -9,10 +9,10 @@
             color: blueviolet;
             /* CSS Comments*/
         }
-        #h1_Id{
+        #h1_Id{ /* "#" ID */
             color:aqua
         }
-        .h1Class{
+        .h1Class{ /* "." Class */
             color: chartreuse;
             background-color: red;
         }
