--- a/CS416-Web/Assignments/Assignment1/website.html
+++ b/CS416-Web/Assignments/Assignment1/website.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DVD Screen Saver</title>
-    
+    <style>
+        p{
+            ;
+        }
+    </style>
 </head>
 <body>
+    <img src="./background.png" style="width: 100%;height: 100%;">
     <div class="logo">
         <img src="./strawberry.png" width="100" height="100">
     </div>
