changes to web programming class

--- a/CS416-Web/Assignments/Assignment1/website.html
+++ b/CS416-Web/Assignments/Assignment1/website.html
@@ -9,21 +9,21 @@
     </style>
 </head>
 <body>
-    <img src="./background.png" style="width: 100%;height: 100%;">
+    <img src="./background.png" alt="tree background" style="width: 100%;height: 100%;">
     <div class="logo">
-        <img src="./strawberry.png" width="128" height="128">
+        <img src="./strawberry.png" alt="strawberry" width="128" height="128">
     </div>
     <div class="logo">
-        <img src="./orange.png" width="128" height="128">
+        <img src="./orange.png" alt="orange" width="128" height="128">
     </div>
     <div class="logo">
-        <img src="./apple.png" width="128" height="128">
+        <img src="./apple.png" alt="apple" width="128" height="128">
     </div>
     <div class="logo">
-        <img src="./pineapple.png" width="128" height="128">
+        <img src="./pineapple.png" alt="pineapple" width="128" height="128">
     </div>
     <div class="logo">
-        <img src="./watermelon.png" width="128" height="128">
+        <img src="./watermelon.png" alt="watermelon" width="128" height="128">
     </div>
 </body>
 <script src="./main.js" charset="utf-8"></script>
