added more facts + counter tracker

--- a/CS416-Web/Messing Around/main.html
+++ b/CS416-Web/Messing Around/main.html
@@ -12,11 +12,12 @@
     <main>
         <section>
             <h1>🐵 Somewhat Knowledgeable Monkey 🐵</h1>
+            <h3 id="learnedFacts"></h3>
             <img height="256px" width="256px" id="monkeyImage" src="./images/monkey.jpg"/>
-            <p id="response"></p>
             <button onclick="onClick(event)" type="button" id="factButton">Receive Wisdom?</button>
+            <p id="response"></p>
+            <script>init()</script> <!-- this might not be the best implemented but whatever -->
         </section>
     </main>
 </body>
-
 </html>
